# course_flask

./: .gitignore  README.md  app.py  database.py  pyproject.toml  settings.py
migrations/versions/: c77d65e56e96_add_image_column_to_animal_table.py  e08fc0218f8b_.py  ed59229175d1_add_breed_column_to_animal_table.py
models/pydantic/: models.py
models/sqlalchemy/: __init__.py  models.py
templates/: home.html
